# spec-forge

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/output/: artefacts.json  report.md
examples/sample_app/: billing_service.py
specforge/: __init__.py  analyze.py  cli.py  generate.py  llm.py  models.py  validate.py
tests/: test_analyze.py  test_generate.py  test_validate.py
